Update suagger documentation for open API and also update REadme.

--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,7 @@
             "./vendor/bin/pint"
         ],
         "test": [
-            "./vendor/bin/pest",
+            "./vendor/bin/pest"
         ]
     },
     "scripts-descriptions": {
